Deleted and replaced the summer and autumn audio files with edited versions to soften the jump between stop and start in the loops.Also remaned the sounds folder to audio and updated the the file paths in my code.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .navalert-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   padding-left: 0;
